feat(kbackend): Started on implementation of get,post,patch for accounting point grid location (FLEX-1136)
